--- a/svg/demo1.html
+++ b/svg/demo1.html
@@ -7,7 +7,35 @@
 <body>
 
 
+<style>
+    svg{
+        border:2px solid #111;
+    }
+</style>
 
+<svg width="500" height="500">
+    <rect width="50" height="50" cx="10" cy="10" rx="2"  ry="2"  fill="red" stroke="blue" stroke-width="2">
+
+    </rect>
+
+    <circle r="30" cx="200" cy="40" fill="green">
+
+    </circle>
+
+    <ellipse r="30" cx="300" cy="40" fill="green"  rx="3" ry="8">
+
+    </ellipse>
+
+</svg>
+
+
+
+<script>
+
+
+
+
+</script>
 
 
 
