--- a/d3/01 function_object.html
+++ b/d3/01 function_object.html
@@ -50,6 +50,12 @@
   widget.render()
 </script>
 
+<h4>
+    我们用函数式风格创建对象，并且该对象所有的方法都没有使用this，那么这个对象就是持久的，
+    持久对象是许多功能行为的集合了
+    <br>
+    note: 如果一个object不包含外部的可见数据成员，并且这个object的方法没有使用this，那么这个objec就是持久的
+</h4>
 
 </body>
 </html>
