--- a/d3/03 data-binding.html
+++ b/d3/03 data-binding.html
@@ -15,8 +15,9 @@
         color: #f0f8ff;
         text-align: right;
         padding-right: 2px;
-        transition: all 0.3s;
+        transition: all 0.6s;
     }
+
     .v-bar {
         min-height: 1px;
         min-width: 30px;
@@ -72,6 +73,11 @@
   }, 1000)
   render(data)
 
+
+
+
+
+
 </script>
 <script type="text" id="object">
   var data = [ // <- A
@@ -126,6 +132,11 @@
 
   render(data);
 
+
+
+
+
+
 </script>
 <script type="text" id="function in array">
   var data = []; // <- A
@@ -162,9 +173,13 @@
   }, 1500);
 
   render();
-</script>
 
-<script type="text/javascript">
+
+
+
+
+</script>
+<script type="text" id="array filter">
   var data = [ // <-A
     {
       expense: 10,
@@ -247,9 +262,7 @@
   function select(category) {
     render(data, category);
   }
-</script>
-
-<div class="control-group">
+  <div class="control-group">
     <button onclick="select('Retail')">
         Retail
     </button>
@@ -263,5 +276,113 @@
         Clear
     </button>
 </div>
+
+
+
+
+
+</script>
+
+
+<script type="text/javascript" id="array-sort">
+  var data = [{expense: 10, category: "Retail"},
+    {
+      expense: 15,
+      category: "Gas"
+    },
+    {
+      expense: 30,
+      category: "Retail"
+    },
+    {
+      expense: 50,
+      category: "Dining"
+    },
+    {
+      expense: 80,
+      category: "Gas"
+    },
+    {
+      expense: 65,
+      category: "Retail"
+    },
+    {
+      expense: 55,
+      category: "Gas"
+    },
+    {
+      expense: 30,
+      category: "Dining"
+    },
+    {
+      expense: 20,
+      category: "Retail"
+    },
+    {
+      expense: 10,
+      category: "Dining"
+    },
+    {
+      expense: 8,
+      category: "Gas"
+    }
+  ];
+
+  function render(data, comparator) {
+    d3.select("body").selectAll("div.h-bar") // <-B
+      .data(data)
+      .enter().append("div")
+      .attr("class", "h-bar")
+      .append("span");
+
+    d3.select("body").selectAll("div.h-bar") // <-C
+      .data(data)
+      .exit().remove();
+
+    d3.select("body").selectAll("div.h-bar") // <-D
+      .data(data)
+      .attr("class", "h-bar")
+      .style("width", function (d) {
+        return (d.expense * 5) + "px";
+      })
+      .select("span")
+      .text(function (d) {
+        return d.category;
+      });
+
+    if (comparator) {
+      d3.select("body")
+        .selectAll("div.h-bar")
+        .sort(comparator); // <-E
+    }
+  }
+
+  var compareByExpense = function (a, b) { // <-F
+    return a.expense < b.expense ? -1 : 1;
+  };
+  var compareByCategory = function (a, b) { // <-G
+    return a.category < b.category ? -1 : 1;
+  };
+
+  render(data);
+
+  function sort(comparator) {
+    render(data, comparator);
+  }
+</script>
+
+<div class="control-group">
+    <button onclick="sort(compareByExpense)">
+        Sort by Width
+    </button>
+    <button onclick="sort(compareByCategory)">
+        Sort by Category
+    </button>
+    <button onclick="sort()">
+        Clear
+    </button>
+</div>
+
+
 </body>
 </html>
