--- a/d3/d3-v5/scatter.html
+++ b/d3/d3-v5/scatter.html
@@ -42,28 +42,22 @@
 
   const svg = d3.select("#app").append("svg").attr("width", $width).attr("height", $height)
 
-  svg.selectAll("circle").
-  data(data).enter().
-  append("circle").
-  attr("cx" ,function(d){
+  svg.selectAll("circle").data(data).enter().append("circle").attr("cx", function (d) {
     return d[0]
-  }).
-  attr("cy" ,function(d){
+  }).attr("cy", function (d) {
     return d[1]
-  }).attr("r" , 7).attr("stroke" , 'white')
+  }).attr("r", 7).attr("stroke", 'white')
 
 
-
-
-  svg.selectAll("text").data(data).enter().append("text").text(function(d){
+  svg.selectAll("text").data(data).enter().append("text").text(function (d) {
     return d.join(",")
-  }).
-  attr("x" , function(d){
+  }).attr("x", function (d) {
     return d[0]
-  }).
-  attr("y" , function(d){
+  }).attr("y", function (d) {
     return d[1]
   }).attr("font-size", 12)
+
+
 
 
 </script>
