--- a/d3/d3-v5/scatter.html
+++ b/d3/d3-v5/scatter.html
@@ -5,6 +5,7 @@
   <title>Title</title>
 </head>
 <body>
+
 <style>
 
   * {
@@ -29,6 +30,7 @@
 <script src="../d3@5.9.0/d3.js"></script>
 
 <script>
+
   let data = [
     [300, 150],
     [240, 90],
@@ -38,6 +40,7 @@
     [370, 60],
     [670, 160],
   ];
+
   let $width = 800, $height = 400;
 
   const svg = d3.select("#app").append("svg").attr("width", $width).attr("height", $height)
@@ -49,6 +52,7 @@
   }).attr("r", 7).attr("stroke", 'white')
 
 
+
   svg.selectAll("text").data(data).enter().append("text").text(function (d) {
     return d.join(",")
   }).attr("x", function (d) {
@@ -57,9 +61,7 @@
     return d[1]
   }).attr("font-size", 12)
 
-const scaleX = d3.scale().linear().domain().range()
-
-
+//const scaleX = d3.scaleLinear().domain().range()
 
 </script>
 
@@ -76,10 +78,14 @@ const scaleX = d3.scale().linear().domain().range()
 
 
 <script>
-  var arr = [11, 2, 3, 4, 7, 88, 99]
-  console.log(d3.min(arr))
-  console.log(d3.max(arr))
-  console.log(d3.extent(arr))
+  var a = 0;
+  if(a){
+    var arr = [11, 2, 3, 4, 7, 88, 99]
+    console.log(d3.min(arr))
+    console.log(d3.max(arr))
+    console.log(d3.extent(arr))
+  }
+
 
 </script>
 
