--- a/d3/d3-v5/chart.html
+++ b/d3/d3-v5/chart.html
@@ -12,62 +12,45 @@
   }
 
   #app {
-    width: 1000px;
-    height: 400px;
-    background: orange;
-    margin: 10px auto;
+    width: 800px;
+    height: 600px;
+    margin: 20px auto;
+    background: aqua;
   }
 
-  .bar {
-    width: 100px;
-    height: 120px;
-    background: grey;
-    display: inline-block;
-    margin-right: 20px;
-  }
 </style>
+
 
 <div id="app">
 
-</div>
 
+</div>
 <script src="../d3@5.9.0/d3.js"></script>
 <script>
-  let data = [], $width = 800, $height = 400, $padding = 5;
-
-  for (var a = 0; a < 20; a++) {
-    data.push(
-      Math.floor(
-        d3.randomUniform(1, 60)()
-      )
-    )
-  }
-
-  var svg = d3.select("#app").append("svg").attr("width", $width).attr("height", $height)
+  const $width = 800, $height = 400;
+  var data = [
+    {
+      date: 2000,
+      number: 10
+    }
+  ]
 
 
-  svg.selectAll("rect").data(data).enter().append("rect")
-    .attr("width", $width / data.length - $padding).attr("height", function (d) {
-    return d * 4
-  })
-    .attr("y", function(d){
-      return $height - 4*d;
-    }).attr("x", function (d, i) {
-    return i * ($width / data.length)
-  })
+  const scaleX = d3.scaleTime().domain([
+    d3.min(data,function(d){
+      return d.date;
+    }),
+    d3.max(data,function(d){
+      return d.date;
+    }),
+  ])
+
+  d3.select("#app").append("svg").attr("width", $width).attr("height" ,$height)
 
 
-  svg.selectAll("text").data(data).enter().append("text").
-  text(function(d){
-    return d
-  }).
-  attr("y", function(d){
-    return $height - 4*d  -  15
-  }).attr("x", function (d, i) {
-    return i * ($width / data.length)  + ($width/data.length - $padding)/2
-  }).attr('fill' ,'black').attr("font-size" , '16px').attr("text-anchor", 'middle')
 
 
 </script>
+
 </body>
 </html>
