--- a/d3/d3-v5/scatter.html
+++ b/d3/d3-v5/scatter.html
@@ -20,16 +20,16 @@
     margin: 20px auto;
   }
 
-  #datav circle{
+  #datav circle {
     cursor: pointer;
   }
 
-  .x-axis path, .x-axis line{
+  .x-axis path, .x-axis line {
     stroke-width: 3;
     shape-rendering: crispEdges;
   }
 
-  .y-axis path, .y-axis line{
+  .y-axis path, .y-axis line {
     stroke-width: 3;
     shape-rendering: crispEdges;
   }
@@ -58,54 +58,59 @@
 
   let $width = 800, $height = 400, $padding = 20;
 
-  const svg = d3.select("#app").append("svg").attr("id" ,'datav').
-  attr("width", $width).attr("height", $height)
+  const svg = d3.select("#app").append("svg").attr("id", 'datav').attr("width", $width).attr("height", $height)
 
-  const scaleX = d3.scaleLinear().domain([0, d3.max(data, function(d){
+
+  /**
+   * @name 创建刻度尺
+   */
+  const scaleX = d3.scaleLinear().domain([0, d3.max(data, function (d) {
     return d[0] + $padding
   })]).range([0, $width])
 
-  const scaleY = d3.scaleLinear().domain([0, d3.max(data, function(d){
+  const scaleY = d3.scaleLinear().domain([0, d3.max(data, function (d) {
     return d[1] + $padding
   })]).range([0, $height])
 
 
   const axisX = d3.axisBottom(scaleX);
 
-  const axisY = d3.axisLeft(scaleY).tickFormat(function(d){
-    return d + 'm'
+  const axisY = d3.axisLeft(scaleY).tickFormat(function (d) {
+    return d + 'M'
   })
 
-   //tickValues([0,100,200,300,400,500,600,700])控制显示所有的刻度
-   //.ticks(16); // 有几个刻度
+  //tickValues([0,100,200,300,400,500,600,700])控制显示所有的刻度
+  //.ticks(16); // 有几个刻度
 
 
-
-
-
+  /**
+   * @name 增加圆点
+   */
   svg.selectAll("circle").data(data).enter().append("circle").attr("cx", function (d) {
     return scaleX(d[0])
   }).attr("cy", function (d) {
     return scaleY(d[1])
   }).attr("r", 17).attr("stroke", 'white').attr("fill", 'green')
 
-
-
+  /**
+   * @name 增加文本
+   */
   svg.selectAll("text").data(data).enter().append("text").text(function (d) {
     return d.join(",")
   }).attr("x", function (d) {
     return scaleX(d[0])
   }).attr("y", function (d) {
     return scaleY(d[1])
-  }).attr("font-size", 12).style("color" , "black")
+  }).attr("font-size", 12).style("color", "black")
 
 
-  svg.append("g").classed("x-axis" ,true).
-  attr("transform", "translate(0,"+ ($height - $padding) +")")
+  /**
+   * @name 增加x,yAxis
+   */
+  svg.append("g").classed("x-axis", true).attr("transform", "translate(0," + ($height - $padding) + ")")
     .call(axisX)
 
-  svg.append("g").classed("y-axis" ,true).
-  attr("transform", "translate(" + ($padding + 20) +",0)")
+  svg.append("g").classed("y-axis", true).attr("transform", "translate(" + ($padding + 20) + ",0)")
     .call(axisY)
 
 
@@ -124,7 +129,7 @@
 
 <script>
   var a = 0;
-  if(a){
+  if (a) {
     var arr = [11, 2, 3, 4, 7, 88, 99]
     console.log(d3.min(arr))
     console.log(d3.max(arr))
@@ -133,6 +138,7 @@
 
 
 </script>
+
 
 
 </body>
