--- a/svg/demo2.html
+++ b/svg/demo2.html
@@ -39,6 +39,16 @@
         stroke="purple" stroke-width="10"></line>
 </svg>
 
+
+<svg viewBox="0,0,1000,400">
+  <rect x="100" y="100" width="100" height="100">
+
+  </rect>
+
+</svg>
+
+
+
 <script>
   var a = []
 
