update the dirs

--- a/d3/book_Learning D3.JS 5.0/histogram.html
+++ b/d3/book_Learning D3.JS 5.0/histogram.html
@@ -31,7 +31,7 @@
 
 </div>
 
-<script src="../d3@5.9.0/d3.js"></script>
+<script src="../lib/d3@5.9.0/d3.js"></script>
 <script>
   let data = [], $width = 800, $height = 400, $padding = 5;
 
