--- a/d3/book_Learning D3.JS 5.0/tree-network.html
+++ b/d3/book_Learning D3.JS 5.0/tree-network.html
@@ -40,7 +40,7 @@
 
 
 </div>
-<script src="../d3@5.9.0/d3.js"></script>
+<script src="../lib/d3@5.9.0/d3.js"></script>
 <script>
   var treeData =
     {
