--- a/d3/book_d3js data visualization In action handbook/09 animate.html
+++ b/d3/book_d3js data visualization In action handbook/09 animate.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="d3@3.5.16/d3.js"></script>
-    <link rel="stylesheet" href="./main.css">
+    <script type="text/javascript" src="../lib/d3@3.5.16/d3.js"></script>
+    <link rel="stylesheet" href="main.css">
     <title>animate</title>
 </head>
 <body>
