--- a/d3/demos-online/polyline.html
+++ b/d3/demos-online/polyline.html
@@ -65,7 +65,7 @@
 
 
 <div>Drag data points to re-render chart</div>
-<script src="../d3@3.5.16/d3.js"></script>
+<script src="../lib/d3@3.5.16/d3.js"></script>
 <script>
   let w = 800;
   let h = 400;
