--- a/d3/book_Learning D3.JS 5.0/_index.html
+++ b/d3/book_Learning D3.JS 5.0/_index.html
@@ -35,7 +35,7 @@
 <p></p>
 
 
-<script src="../d3@5.9.0/d3.js"></script>
+<script src="../lib/d3@5.9.0/d3.js"></script>
 <script>
 
   const dataset = [10, 15, 20, 25, 30];
