--- a/d3/book_Learning D3.JS 5.0/chart.html
+++ b/d3/book_Learning D3.JS 5.0/chart.html
@@ -25,7 +25,7 @@
 
 
 </div>
-<script src="../d3@5.9.0/d3.js"></script>
+<script src="../lib/d3@5.9.0/d3.js"></script>
 <script>
   // data is an array of objects
   // with two properties: date and number
