--- a/d3/book_d3js data visualization In action handbook/01 function-object.html
+++ b/d3/book_d3js data visualization In action handbook/01 function-object.html
@@ -9,7 +9,7 @@
 <div id="app"></div>
 
 
-<script src="d3@3.5.16/d3.js"></script>
+<script src="../lib/d3@3.5.16/d3.js"></script>
 <script>
   /**
    * @description SimpleWidget is a function also an Object
