--- a/d3/book_d3js data visualization In action handbook/03 data-binding.html
+++ b/d3/book_d3js data visualization In action handbook/03 data-binding.html
@@ -40,7 +40,7 @@
 
 </div>
 
-<script src="d3@3.5.16/d3.js"></script>
+<script src="../lib/d3@3.5.16/d3.js"></script>
 <script type="text" id="array">
   const data = [
     10, 15, 30, 50, 80
