--- a/d3/book_d3js data visualization In action handbook/05 scale.html
+++ b/d3/book_d3js data visualization In action handbook/05 scale.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Quantitative Scales</title>
-    <script type="text/javascript" src="d3@3.5.16/d3.js"></script>
+    <script type="text/javascript" src="../lib/d3@3.5.16/d3.js"></script>
 </head>
 
 <body>
