--- a/d3/demos-online/pie_with_animation.html
+++ b/d3/demos-online/pie_with_animation.html
@@ -40,7 +40,7 @@
   </filter>
 </svg>
 
-<script src="../d3@3.5.16/d3.js"></script>
+<script src="../lib/d3@3.5.16/d3.js"></script>
 <script>
   var width = 300;
   var height = 300;
