--- a/d3/demos-online/scatter.html
+++ b/d3/demos-online/scatter.html
@@ -53,7 +53,7 @@
 <div class="canvas">
 
 </div>
-<script src="../d3@3.5.16/d3.js"></script>
+<script src="../lib/d3@3.5.16/d3.js"></script>
 <script>
   //Dynamic, random dataset
   var dataset = [];
