--- a/d3/huahua/index.html
+++ b/d3/huahua/index.html
@@ -16,32 +16,36 @@
     height: 400px;
   }
 
+  #app svg {
+    width:100%;
+    height:100%;
+  }
+
 </style>
 
 
-<svg id="app">
+<div id="app">
 
 
-</svg>
+</div>
 
 <script src="../lib/d3@5.9.0/d3.js"></script>
 <script>
   /**
    * @name d3 shape 1  line
-   * @type {number[][]}
    */
-  function drawLine(){
-    var data = [[30, 30], [330, 20], [220, 330], [630, 330]],
-      canvas = d3.select('#app'),   //  页面中已经存在id为canvas的SVG元素
+  function drawLine() {
+    var
+      dataSource    = [[30, 30], [330, 20], [220, 330], [630, 330]],
+      drawingBoard  = d3.select('#app').append("svg").attr("viewBox", "0,0 400,400"),
       lineGenerator = d3.line().x(d => d[0]).y(d => d[1])
 
     //  在SVG上添加折线
-    canvas.append('path')
-      .attr('stroke', 'purple')
-      .attr('stroke-width', '3')
-      .attr('fill', 'none')
-      .attr('d', lineGenerator(data));
+    drawingBoard.append('path')
+      .attr('stroke', 'purple').attr('stroke-width', '3').attr('fill', 'none')
+      .attr('d', lineGenerator(dataSource));
   }
+
   drawLine()
 
 </script>
