--- a/svg/demo2.html
+++ b/svg/demo2.html
@@ -16,10 +16,47 @@
     height: 400px;
   }
 
-  svg {
-    width: 400px;
-    height: 400px;
-    background: #ccc;
+  /*svg {*/
+    /*width: 400px;*/
+    /*height: 400px;*/
+    /*background: #ccc;*/
+  /*}*/
+
+  body {
+    text-align: center;
+  }
+  .profile-link {
+    display: inline-block;
+    padding: 1em;
+    width: 10em;
+    max-width: 80%;
+  }
+  .profile-pic {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    /**
+    -webkit-filter:
+      drop-shadow(#222 0.2em 0.2em 0.8em);
+    filter:
+      drop-shadow(#222 0.2em 0.2em 0.8em);
+    transition: filter 0.3s, box-shadow 0.3s;
+    -webkit-transition: filter 0.3s, -webkit-filter 0.3s, box-shadow 0.3s;
+  }
+  .profile-link:hover .profile-pic,
+  .profile-link:focus .profile-pic {
+    /**/
+  -webkit-filter: url(#duotone)
+    drop-shadow(#224 0.25em 0.25em 0.6em);
+    filter:  url(#duotone); /* For Firefox pre-35 */
+    filter:  url(#duotone)
+    drop-shadow(#224 0.25em 0.25em 0.6em);
+  }
+  .defs-only {
+    position: absolute;
+    height: 0; width: 0;
+    overflow: none;
+    left: -100%;
   }
 
 </style>
@@ -47,6 +84,21 @@
 
 </svg>
 
+
+<svg class="defs-only">
+  <filter id="duotone" color-interpolation-filters="sRGB"
+          x="0" y="0" height="100%" width="100%">
+    <feColorMatrix type="matrix"
+                   values="0.90 0 0 0   0.40
+              0.95 0 0 0  -0.10
+             -0.20 0 0 0   0.65
+                0  0 0 1   0" />
+  </filter>
+</svg>
+<a class="profile-link" href="#" title="More about Amelia Bellamy-Royds">
+  <img class="profile-pic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/91525/AmeliaBR-bw.jpg"/></a>
+<a class="profile-link" href="#" title="More about AmeliaBR">
+  <img class="profile-pic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/91525/AmeliaBR2-bw.jpg"/></a>
 
 
 <script>
